* new `module iir` infinite impulse response filter
* experimental support for GNU / Hurd
* `module_raw galax` is deprecated. Users should switch to `module_raw input`
* multitouch for (at least) eGalax 210 (`module_raw input` and `ts_read_mt()`)
* new tests/ts_verify API test program
* fix support for protocol type A devices (example Sitronix ST1232)
* bugfixes
  - 338d2e4 input-raw: add MT protocol type A support to ts_read()
  - e47df79 input-raw: fix pressure capable multitouch devices
  - dbb8f4c ts_uinput: correctly return in case forking fails


## tslib 1.8

tslib 1.8 is backwards compatible. Changes since last release include:
* experimental support for building on Windows (using MSYS2)
* fixed ts_read_mt() in non-blocking operation when trying to read more than
  1 sample, see bugfixes
* added workaround for strangely behaving eGalax model 210 devices, see bugfixes
* bugfixes
  - 388d3da input-raw: ts_read_mt: fix returning actually read samples
  - c7f0966 debounce: use signed time values
  - 9a9b0c9 pthres: read_mt: fix internal pressure state handling
  - fa10e4c galax: version 210: use ABS_MT_DISTANCE to find pressure 0


## tslib 1.7

Changes since last release:
* ts_read_mt() now consistently returns errno set by read() when using
  module_raw input
* extended ts_print_mt to test more of our API
* ts_print_mt --raw replaces the ts_print_raw_mt program
* basic support for the Haiku OS
* added a release helper script to simplify the releasing process
* add proper AUTHORS and THANKS files, as well as .mailmap
* bugfixes
  - 6ea643e ts_test_mt: fix idev commandline option
  - 9617c7d dmc-raw: fix errno return code to be negative
  - dc2fdaf input-raw: remove errror message on each negative return from read()
  - 75b5f40 input-raw: return read() errno on error.
  - de5e261 skip: fix buffer memory freeing
  - da5477e median: fix ts_read_mt() pen down event


## tslib 1.6

Changes since the last release: